src/htdocs/css/features/_historicalEvents.scss
@use '../util/opt/variables' as *;

@layer default {
  #summary-pane {
    .historical,
    .dd-historical {
      container-type: inline-size; // parent container
    }
  }

  .historical-events {
    max-width: 100%;

    > div {
      display: flex;
      flex-wrap: wrap;
      gap: 2rem 3rem;
      margin-bottom: .25rem;

      div {
        max-width: 100%;
        width: calc($panel-width - 2rem);
      }
    }

    .mmi {
      align-items: center;
      display: flex;
      gap: 0 .375rem;
      padding: 0 0 0 .5rem;
    }

    @container
      (min-width: calc(2 * #{$panel-width} + 1rem)) and
      (max-width: calc(3 * #{$panel-width} + 2rem)) {
        width: calc(2 * $panel-width + 1rem);
      }

    @container
      (min-width: #{$panel-width}) and
      (max-width: calc(2 * #{$panel-width} + 1rem)) {
        width: $panel-width;
      }
  }
}

